--- a/Logistics.API/Logistics.API.csproj
+++ b/Logistics.API/Logistics.API.csproj
@@ -13,6 +13,7 @@
     <Content Remove="Models\**" />
     <EmbeddedResource Remove="Models\**" />
     <None Remove="Models\**" />
+    <None Remove="DAL\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="DAL\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="MongoDB.Driver" />
