--- a/Logistics.API/appsettings.json
+++ b/Logistics.API/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDb-Connection-String": "mongodb+srv://admin:admin@sandbox.jif82.mongodb.net/?retryWrites=true&w=majority"
 }
 
